--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -7,7 +7,7 @@
         <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
-        Hello from Facelets
+        Hello from Facelets//teste
         <br />
         <h:link outcome="/equEquipamento/List" value="Equipamentos"/>
         <br />
