--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -27,7 +27,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Sistema de Reservas</a>
+                    <a class="navbar-brand" href="#">Sistema de Reservass</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
