--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -27,7 +27,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Sistema de Reservasss</a>
+                    <a class="navbar-brand" href="#">Sistema de Reservasss2</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
