--- a/web/equEquipamento/Create.xhtml
+++ b/web/equEquipamento/Create.xhtml
@@ -6,55 +6,55 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:composition template="/template.xhtml">
-
+        <ui:define name="title">
+            <h:outputText value="#{bundle.CreateEquEquipamentoTitle}"></h:outputText>
+        </ui:define>
         <ui:define name="body">
-                <h3 class="page-header">Adicionar novo equipamento</h3>
-                <h:panelGroup id="messagePanel" layout="block">
-                    <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-                </h:panelGroup>
-                <h:form class="form-horizontal">
-
-                    <div class="form-group">    
-                        <h:outputLabel class="control-label col-sm-2" value="#{bundle.CreateEquEquipamentoLabel_equDescricao}" for="equDescricao" />
-                        <div class="col-sm-10">
-                            <h:inputText class="form-control" id="equDescricao" value="#{equEquipamentoController.selected.equDescricao}" title="#{bundle.CreateEquEquipamentoTitle_equDescricao}" />
-                        </div>
+            <h:panelGroup id="messagePanel" layout="block">
+                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
+            </h:panelGroup>
+            <h:form class="form-horizontal">
+                <div class="form-group">    
+                    <h:outputLabel class="control-label col-sm-2" value="#{bundle.CreateEquEquipamentoLabel_equDescricao}" for="equDescricao" />
+                    <div class="col-sm-10">
+                        <h:inputText class="form-control" id="equDescricao" value="#{equEquipamentoController.selected.equDescricao}" title="#{bundle.CreateEquEquipamentoTitle_equDescricao}" required="true" requiredMessage="#{bundle.CreateEquEquipamentoRequiredMessage_equDescricao}"/>
                     </div>
-                    <div class="form-group">
-                        <h:outputLabel class="control-label col-sm-2" value="#{bundle.CreateEquEquipamentoLabel_equAtivo}" for="equAtivo" />
-                        <div class="col-sm-10">
-                            <h:selectOneMenu class="form-control" id="equAtivo" value="#{equEquipamentoController.selected.equAtivo}" title="#{bundle.CreateEquEquipamentoTitle_equAtivo}" required="true" requiredMessage="#{bundle.CreateEquEquipamentoRequiredMessage_equAtivo}">
-                                <f:selectItem itemValue="#{1}" itemLabel="Sim"/>
-                                <f:selectItem itemValue="#{0}" itemLabel="Não" />
-                            </h:selectOneMenu>
-                        </div>
+                </div>
+                <div class="form-group">
+                    <h:outputLabel class="control-label col-sm-2" value="#{bundle.CreateEquEquipamentoLabel_equAtivo}" for="equAtivo" />
+                    <div class="col-sm-10">
+                        <h:selectOneMenu class="form-control" id="equAtivo" value="#{equEquipamentoController.selected.equAtivo}" title="#{bundle.CreateEquEquipamentoTitle_equAtivo}" required="true" requiredMessage="#{bundle.CreateEquEquipamentoRequiredMessage_equAtivo}">
+                            <f:selectItem itemValue="#{1}" itemLabel="Sim"/>
+                            <f:selectItem itemValue="#{0}" itemLabel="Não" />
+                        </h:selectOneMenu>
                     </div>
-                    <div class="form-group">
-                        <h:outputLabel class="control-label col-sm-2" value="Observações" for="equObservacoes" />
-                        <div class="col-sm-10">
-                            <h:inputText class="form-control" id="equObservacoes" value="#{equEquipamentoController.selected.equObservacoes}" title="#{bundle.CreateEquEquipamentoTitle_equObservacoes}" />
-                        </div>
+                </div>
+                <div class="form-group">
+                    <h:outputLabel class="control-label col-sm-2" value="Observações" for="equObservacoes" />
+                    <div class="col-sm-10">
+                        <h:inputText class="form-control" id="equObservacoes" value="#{equEquipamentoController.selected.equObservacoes}" title="#{bundle.CreateEquEquipamentoTitle_equObservacoes}" />
                     </div>
-                    <div class="form-group">
-                        <h:outputLabel class="control-label col-sm-2" value="#{bundle.CreateEquEquipamentoLabel_equipamentoTipoTpeId}" for="equipamentoTipoTpeId" />
-                        <div class="col-sm-10">
-                            <h:selectOneMenu class="form-control" id="equipamentoTipoTpeId" value="#{equEquipamentoController.selected.equipamentoTipoTpeId}" title="#{bundle.CreateEquEquipamentoTitle_equipamentoTipoTpeId}" required="true" requiredMessage="#{bundle.CreateEquEquipamentoRequiredMessage_equipamentoTipoTpeId}">
-                                <f:selectItems value="#{equipamentoTipoController.itemsAvailableSelectOne}"/>
-                            </h:selectOneMenu>
-                        </div>
+                </div>
+                <div class="form-group">
+                    <h:outputLabel class="control-label col-sm-2" value="#{bundle.CreateEquEquipamentoLabel_equipamentoTipoTpeId}" for="equipamentoTipoTpeId" />
+                    <div class="col-sm-10">
+                        <h:selectOneMenu class="form-control" id="equipamentoTipoTpeId" value="#{equEquipamentoController.selected.equipamentoTipoTpeId}" title="#{bundle.CreateEquEquipamentoTitle_equipamentoTipoTpeId}" required="true" requiredMessage="#{bundle.CreateEquEquipamentoRequiredMessage_equipamentoTipoTpeId}">
+                            <f:selectItems value="#{equipamentoTipoController.itemsAvailableSelectOne}"/>
+                        </h:selectOneMenu>
                     </div>
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <h:commandButton class="btn-primary" action="#{equEquipamentoController.create}" value="Salvar"/>
-                        </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <h:commandButton class="btn btn-primary" action="#{equEquipamentoController.create}" value="Salvar"/>
                     </div>
-                    <br />
-                    <br />
-                    <h:commandLink action="#{equEquipamentoController.prepareList}" value="#{bundle.CreateEquEquipamentoShowAllLink}" immediate="true"/>
-                    <br />
-                    <br />
-                    <h:link outcome="/index" value="#{bundle.CreateEquEquipamentoIndexLink}"/>
-                </h:form>
+                </div>
+                <br />
+                <br />
+                <h:commandLink action="#{equEquipamentoController.prepareList}" value="#{bundle.CreateEquEquipamentoShowAllLink}" immediate="true"/>
+                <br />
+                <br />
+                <h:link outcome="/index" value="#{bundle.CreateEquEquipamentoIndexLink}"/>
+            </h:form>
         </ui:define>
     </ui:composition>
 
