--- a/web/equEquipamento/List.xhtml
+++ b/web/equEquipamento/List.xhtml
@@ -6,67 +6,80 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:composition template="/template.xhtml">
-      
+
         <ui:define name="body">
-            
+
             <h:form>
                 <h:panelGroup id="messagePanel" layout="block">
                     <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
                 </h:panelGroup>
                 <h:outputText escape="false" value="#{bundle.ListEquEquipamentoEmpty}" rendered="#{equEquipamentoController.items.rowCount == 0}"/>
-                <h:panelGroup rendered="#{equEquipamentoController.items.rowCount > 0}">
-                    <h:outputText value="#{equEquipamentoController.pagination.pageFirstItem + 1}..#{equEquipamentoController.pagination.pageLastItem + 1}/#{equEquipamentoController.pagination.itemsCount}"/>&nbsp;
-                    <h:commandLink action="#{equEquipamentoController.previous}" value="#{bundle.Previous} #{equEquipamentoController.pagination.pageSize}" rendered="#{equEquipamentoController.pagination.hasPreviousPage}"/>&nbsp;
-                    <h:commandLink action="#{equEquipamentoController.next}" value="#{bundle.Next} #{equEquipamentoController.pagination.pageSize}" rendered="#{equEquipamentoController.pagination.hasNextPage}"/>&nbsp;
-                    <h:dataTable class="table table-striped table-hover" value="#{equEquipamentoController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEquEquipamentoTitle_equId}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.equId}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEquEquipamentoTitle_equDescricao}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.equDescricao}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEquEquipamentoTitle_equAtivo}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.equAtivo}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEquEquipamentoTitle_equObservacoes}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.equObservacoes}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEquEquipamentoTitle_equipamentoTipoTpeId}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.equipamentoTipoTpeId}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Ações"/>
-                            </f:facet>
-                            <h:commandLink action="#{equEquipamentoController.prepareView}" value="#{bundle.ListEquEquipamentoViewLink}"/>
-                            <h:outputText value=" "/>
-                            <h:commandLink action="#{equEquipamentoController.prepareEdit}" value="#{bundle.ListEquEquipamentoEditLink}"/>
-                            <h:outputText value=" "/>
-                            <h:commandLink action="#{equEquipamentoController.destroy}" value="#{bundle.ListEquEquipamentoDestroyLink}"/>
-                        </h:column>
-                    </h:dataTable>
-                </h:panelGroup>
-                <br />
-   
-                       <h:commandButton class="btn-primary" action="#{equEquipamentoController.prepareCreate}" value="Novo equipamento"/>
+                <div class="panel panel-default" rendered="#{equEquipamentoController.items.rowCount > 0}">
+                    <div class="panel-heading"><div class="btn-group" role="group">
+                            <h:commandButton class="btn btn-primary " action="#{equEquipamentoController.prepareCreate}" value="Novo equipamento"/>
+                        </div></div>
+                    <div class="panel-body">
+                        <h:dataTable class="table table-striped table-hover table-bordered" value="#{equEquipamentoController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" >
+                            <h:column>
+                                <f:facet name="header">
+                                    <h:outputText value="#{bundle.ListEquEquipamentoTitle_equId}"/>
+                                </f:facet>
+                                <h:outputText value="#{item.equId}"/>
+                            </h:column>
+                            <h:column>
+                                <f:facet name="header">
+                                    <h:outputText value="#{bundle.ListEquEquipamentoTitle_equDescricao}"/>
+                                </f:facet>
+                                <h:outputText value="#{item.equDescricao}"/>
+                            </h:column>
+                            <h:column>
+                                <f:facet name="header">
+                                    <h:outputText value="#{bundle.ListEquEquipamentoTitle_equAtivo}"/>
+                                </f:facet>
+                                <h:outputText value="#{item.equAtivo==1?'Sim':'Não'}"/>
+                            </h:column>
+                            <h:column>
+                                <f:facet name="header">
+                                    <h:outputText value="#{bundle.ListEquEquipamentoTitle_equObservacoes}"/>
+                                </f:facet>
+                                <h:outputText value="#{item.equObservacoes}"/>
+                            </h:column>
+                            <h:column>
+                                <f:facet name="header">
+                                    <h:outputText value="#{bundle.ListEquEquipamentoTitle_equipamentoTipoTpeId}"/>
+                                </f:facet>
+                                <h:outputText value="#{item.equipamentoTipoTpeId.tpeDescricao}"/>
+                            </h:column>
+                            <h:column>
+                                <f:facet name="header">
+                                    <h:outputText value="Ações"/>
+                                </f:facet>
+                                <div class="btn-group" role="group">
+                                    <h:commandLink class="btn btn-info btn-sm" action="#{equEquipamentoController.prepareView}" value="#{bundle.ListEquEquipamentoViewLink}"/>
+                                    <h:outputText value=" "/>
+                                    <h:commandLink class="btn btn-primary btn-sm" action="#{equEquipamentoController.prepareEdit}" value="#{bundle.ListEquEquipamentoEditLink}"/>
+                                    <h:outputText value=" "/>
+                                    <h:commandLink class="btn btn-danger btn-sm" action="#{equEquipamentoController.destroy}" value="#{bundle.ListEquEquipamentoDestroyLink}"/>
+                                    <h:outputText value=" "/> 
+                                </div>
+                            </h:column>
+                        </h:dataTable>
+                    </div>
+                    <div class="panel-footer">
+
+                        <ul class="pager">
+                            <li class="previous"><h:commandLink action="#{equEquipamentoController.previous}" value="#{bundle.Previous} #{equEquipamentoController.pagination.pageSize}" rendered="#{equEquipamentoController.pagination.hasPreviousPage}"/>&nbsp;</li>
+                            <li class="badge"> <h:outputText value="#{equEquipamentoController.pagination.pageFirstItem + 1}..#{equEquipamentoController.pagination.pageLastItem + 1}/#{equEquipamentoController.pagination.itemsCount}"/>&nbsp;</li>
+                            <li class="next"><h:commandLink action="#{equEquipamentoController.next}" value="#{bundle.Next} #{equEquipamentoController.pagination.pageSize}" rendered="#{equEquipamentoController.pagination.hasNextPage}"/>&nbsp;</li>
+                        </ul>
+
+                    </div>
+                </div>
                 <br />
                 <br />
                 <h:link outcome="/index" value="#{bundle.ListEquEquipamentoIndexLink}"/>
+                <br />
+                <br />
             </h:form>
         </ui:define>
     </ui:composition>
