--- a/web/equipamentoTipo/Create.xhtml
+++ b/web/equipamentoTipo/Create.xhtml
@@ -13,15 +13,18 @@
             <h:panelGroup id="messagePanel" layout="block">
                 <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
             </h:panelGroup>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.CreateEquipamentoTipoLabel_tpeId}" for="tpeId" />
-                    <h:inputText id="tpeId" value="#{equipamentoTipoController.selected.tpeId}" title="#{bundle.CreateEquipamentoTipoTitle_tpeId}" required="true" requiredMessage="#{bundle.CreateEquipamentoTipoRequiredMessage_tpeId}"/>
-                    <h:outputLabel value="#{bundle.CreateEquipamentoTipoLabel_tpeDescricao}" for="tpeDescricao" />
-                    <h:inputText id="tpeDescricao" value="#{equipamentoTipoController.selected.tpeDescricao}" title="#{bundle.CreateEquipamentoTipoTitle_tpeDescricao}" />
-                </h:panelGrid>
-                <br />
-                <h:commandLink action="#{equipamentoTipoController.create}" value="#{bundle.CreateEquipamentoTipoSaveLink}" />
+            <h:form class="form-horizontal">
+                <div class="form-group"> 
+                    <h:outputLabel class="control-label col-sm-2" value="#{bundle.CreateEquipamentoTipoLabel_tpeDescricao}" for="tpeDescricao" />
+                    <div class="col-sm-10">
+                        <h:inputText class="form-control" id="tpeDescricao" value="#{equipamentoTipoController.selected.tpeDescricao}" title="#{bundle.CreateEquipamentoTipoTitle_tpeDescricao}" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <h:commandButton class="btn btn-primary" action="#{equipamentoTipoController.create}" value="#{bundle.CreateEquipamentoTipoSaveLink}"/>
+                    </div>
+                </div>
                 <br />
                 <br />
                 <h:commandLink action="#{equipamentoTipoController.prepareList}" value="#{bundle.CreateEquipamentoTipoShowAllLink}" immediate="true"/>
