--- a/web/equipamentoTipo/List.xhtml
+++ b/web/equipamentoTipo/List.xhtml
@@ -6,50 +6,64 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:composition template="/template.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.ListEquipamentoTipoTitle}"></h:outputText>
-        </ui:define>
+
         <ui:define name="body">
-            <h:form styleClass="jsfcrud_list_form">
+
+            <h:form>
                 <h:panelGroup id="messagePanel" layout="block">
                     <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
                 </h:panelGroup>
                 <h:outputText escape="false" value="#{bundle.ListEquipamentoTipoEmpty}" rendered="#{equipamentoTipoController.items.rowCount == 0}"/>
-                <h:panelGroup rendered="#{equipamentoTipoController.items.rowCount > 0}">
-                    <h:outputText value="#{equipamentoTipoController.pagination.pageFirstItem + 1}..#{equipamentoTipoController.pagination.pageLastItem + 1}/#{equipamentoTipoController.pagination.itemsCount}"/>&nbsp;
-                    <h:commandLink action="#{equipamentoTipoController.previous}" value="#{bundle.Previous} #{equipamentoTipoController.pagination.pageSize}" rendered="#{equipamentoTipoController.pagination.hasPreviousPage}"/>&nbsp;
-                    <h:commandLink action="#{equipamentoTipoController.next}" value="#{bundle.Next} #{equipamentoTipoController.pagination.pageSize}" rendered="#{equipamentoTipoController.pagination.hasNextPage}"/>&nbsp;
-                    <h:dataTable value="#{equipamentoTipoController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEquipamentoTipoTitle_tpeId}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.tpeId}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEquipamentoTipoTitle_tpeDescricao}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.tpeDescricao}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="&nbsp;"/>
-                            </f:facet>
-                            <h:commandLink action="#{equipamentoTipoController.prepareView}" value="#{bundle.ListEquipamentoTipoViewLink}"/>
-                            <h:outputText value=" "/>
-                            <h:commandLink action="#{equipamentoTipoController.prepareEdit}" value="#{bundle.ListEquipamentoTipoEditLink}"/>
-                            <h:outputText value=" "/>
-                            <h:commandLink action="#{equipamentoTipoController.destroy}" value="#{bundle.ListEquipamentoTipoDestroyLink}"/>
-                        </h:column>
-                    </h:dataTable>
-                </h:panelGroup>
-                <br />
-               
-                <h:commandButton class="btn-primary" action="#{equipamentoTipoController.prepareCreate}"  value="Novo tipo de equipamento"/>
+                <div class="panel panel-default" rendered="#{equipamentoTipoController.items.rowCount > 0}">
+                    <div class="panel-heading">
+                        <div class="btn-group" role="group">
+                            <h:commandButton class="btn btn-primary " action="#{equipamentoTipoController.prepareCreate}" value="Novo Tipo de Equipamento"/>
+                        </div>
+                    </div>
+                    <div class="panel-body">
+                        <h:dataTable class="table table-striped table-hover table-bordered" value="#{equipamentoTipoController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all">
+                            <h:column>
+                                <f:facet name="header">
+                                    <h:outputText value="#{bundle.ListEquipamentoTipoTitle_tpeId}"/>
+                                </f:facet>
+                                <h:outputText value="#{item.tpeId}"/>
+                            </h:column>
+                            <h:column>
+                                <f:facet name="header">
+                                    <h:outputText value="#{bundle.ListEquipamentoTipoTitle_tpeDescricao}"/>
+                                </f:facet>
+                                <h:outputText value="#{item.tpeDescricao}"/>
+                            </h:column>
+                            <h:column>
+                                <f:facet name="header">
+                                    <h:outputText value="Ações"/>
+                                </f:facet>
+                                <div class="btn-group" role="group">
+                                    <h:commandLink class="btn btn-info btn-sm" action="#{equipamentoTipoController.prepareView}" value="#{bundle.ListEquipamentoTipoViewLink}"/>
+                                    <h:outputText value=" "/>
+                                    <h:commandLink class="btn btn-primary btn-sm" action="#{equipamentoTipoController.prepareEdit}" value="#{bundle.ListEquipamentoTipoEditLink}"/>
+                                    <h:outputText value=" "/>
+                                    <h:commandLink class="btn btn-danger btn-sm" action="#{equipamentoTipoController.destroy}" value="#{bundle.ListEquipamentoTipoDestroyLink}"/>
+                                    <h:outputText value=" "/> 
+                                </div>
+                            </h:column>
+                        </h:dataTable>
+                    </div>
+                    <div class="panel-footer">
+
+                        <ul class="pager">
+                            <li class="previous"><h:commandLink action="#{equipamentoTipoController.previous}" value="#{bundle.Previous} #{equipamentoTipoController.pagination.pageSize}" rendered="#{equipamentoTipoController.pagination.hasPreviousPage}"/>&nbsp;</li>
+                            <li class="badge"> <h:outputText value="#{equipamentoTipoController.pagination.pageFirstItem + 1}..#{equipamentoTipoController.pagination.pageLastItem + 1}/#{equipamentoTipoController.pagination.itemsCount}"/>&nbsp;</li>
+                            <li class="next"><h:commandLink action="#{equipamentoTipoController.next}" value="#{bundle.Next} #{equipamentoTipoController.pagination.pageSize}" rendered="#{equipamentoTipoController.pagination.hasNextPage}"/>&nbsp;</li>
+                        </ul>
+
+                    </div>
+                </div>
                 <br />
                 <br />
                 <h:link outcome="/index" value="#{bundle.ListEquipamentoTipoIndexLink}"/>
+                <br />
+                <br />
             </h:form>
         </ui:define>
     </ui:composition>
